@@ -1,5 +1,6 @@
 Changes for 1.6.6
 
+ - [ZBX-966] added sorting in map creation form (Artem)
  - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)
  - [ZBX-967] cosmetic changes in --help output of zabbix_get and zabbix_sender (Alexei)
  - [ZBX-898] fixed slow performance of events component on a screen (Alexei)
